# yt-tools

./: .gitignore  README.md  pyproject.toml
scripts/: download_playlist.sh  download_video.sh
src/ytdl_app/: __init__.py
src/ytdl_app/audio/: __init__.py  editor.py  effects.py  mixing.py  processing.py
src/ytdl_app/cli/: __init__.py  audio_cmd.py  download_cmd.py  main.py  project_cmd.py  video_cmd.py
src/ytdl_app/core/: __init__.py  downloader.py
src/ytdl_app/download/: __init__.py  archive.py  config.py  downloader.py  item.py  metadata.py  queue.py
src/ytdl_app/gui/: __init__.py  app.py  state.py
src/ytdl_app/gui/components/: __init__.py  file_selector.py  progress.py
src/ytdl_app/gui/tabs/: __init__.py  audio_mixing_tab.py  audio_processing_tab.py  audio_tab.py  download_tab.py  project_tab.py  video_effects_tab.py  video_tab.py  video_transforms_tab.py
src/ytdl_app/models/: __init__.py  formats.py  metadata.py
src/ytdl_app/project/: __init__.py  batch.py  config.py  history.py  manager.py
src/ytdl_app/video/: __init__.py  editor.py  effects.py  operations.py  overlay.py  subtitles.py  transforms.py
tests/: __init__.py  conftest.py
tests/test_audio/: test_effects.py  test_mixing.py
tests/test_download/: test_archive.py  test_config.py  test_downloader.py  test_queue.py
tests/test_models/: test_formats.py  test_metadata.py
tests/test_project/: __init__.py  test_history.py  test_manager.py
tests/test_video/: __init__.py  test_editor.py  test_transforms.py
